# vision

caffe_deep_cnn_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
caffe_deep_cnn_test/scripts/: nets.py  nets.py~  numpy_path_check.py  publisher.py  publisher.py~
caffe_deep_cnn_test/synset/: words_list.txt
deep_cnn_object_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
deep_cnn_object_detection/conf/: points.yaml  points.yaml~
deep_cnn_object_detection/include/deep_cnn_object_detection/: cloud_saver.h  image_preparator.h
deep_cnn_object_detection/scripts/: joint_vel_calc.py  mover.py  parse_dataset.py  save_clouds.py  scan_object.py
deep_cnn_object_detection/src/: cloud_saver.cpp  image_preparator.cpp
deep_cnn_object_detection/srv/: getImage.srv
deep_cnn_object_detection/tools/: convert_dataset.sh  convert_dataset.sh~  train_googlenet.sh~
object_recognition_core/apps/: detection
object_recognition_core/include/object_recognition_core/db/: view.h
object_recognition_core/src/db/: db_couch.cpp  db_filesystem.cpp  model_utils.cpp  view.cpp
object_recognition_ros/python/object_recognition_ros/io/sink/: publisher.py
object_recognition_ros/src/io/: MsgAssembler.cpp
object_recognition_ros_visualization/src/rviz_plugin/: ork_object_visual.cpp
ork_to_pose_converter/: CMakeLists.txt  package.xml
ork_to_pose_converter/include/ork_to_pose_converter/: ork_to_pose_converter_node.h
ork_to_pose_converter/launch/: ork_to_pose_converter.launch
ork_to_pose_converter/src/: ork_to_pose_converter_node.cpp
pcl/: CMakeLists.txt  CMakeLists.txt~  kinect.launch  kinect_pub_tf.launch  openni2.no_tf.launch  openni2.publish.launch  package.xml  setup.py  tf_publisher_kinect.launch  tf_publisher_xtion.launch  usb_cam.launch  usb_cam.launch~  xtion.launch  xtion_tf.launch
pcl/PLY_WRITER_BIN/: CMakeLists.txt  cell.cpp  module.cpp
pcl/apps/: cad_training  cylinder_training  domik_training  fake_object_pub  object_scanner  object_scanner_experimental  test_scan
pcl/conf/: detection.5kg  detection.aa_battery  detection.aaa_battery  detection.bag  detection.bottle  detection.cube_wood  detection.d-link  detection.domik_v_derevne  detection.grenade  detection.lamp  detection.leap_motion_box  detection.phone  detection.pipe  detection.red_sport_tool  detection.sugar
pcl/models/: 1.ply  123.ply  5kg.ply  5kg.stl  F-1_Grenade.blend  _grenade.ply  _grenade.stl  _grenade_cut.ply  aa_battery.ply  aa_battery.stl  aa_battery_centered.ply  aa_battery_centered.stl  aaa_battery.ply  aaa_battery.stl  bag.ply  bag.stl  bottle.ply  bottle.stl  cube.ply  cube.stl  cube_wood.ply  cube_wood.stl  cup.ply  cup.stl  cylinder.ply  cylinder.stl  d-link.ply  d-link.stl  domik_v_derevne.ply  domik_v_derevne.stl  domik_v_derevne_SCANNED.ply  domik_v_derevne_SCANNED.stl  duck.ply  duck.stl  grenade.stl  jar.ply  jar.stl  lamp.ply  lamp.stl  lamp_.ply  (+25 more)
pcl/python/object_recognition_msd_pcl/: #scanner_plasm.py#  __init__.py  __scanner_plasm.py  detector.py  detector_experimental.py  scanner_plasm.py  scanner_plasm_experimental.py  trainer.py
pcl/src/: CMakeLists.txt  ___CMakeLists.txt  scanner.cpp  trainer.cpp
pcl/src/experimental/: CAD_trainer.cpp  __trainer_experimental.cpp  db_msd_pcl.cpp  db_msd_pcl.h  detector_experimental.cpp  module_experimental.cpp  vfh_trainer_experimental.cpp
pcl/src/stable/: PCLProcessor.cpp  PCLProcessor.h  TrainData.cpp  TrainData.h  detector.cpp  module.cpp  trainer.cpp
pcl/test/: CMakeLists.txt  ourcvfh_linear_regression.ipynb
pcl/test/.ipynb_checkpoints/: ourcvfh_linear_regression-checkpoint.ipynb
pcl/test/ourcvfh_regression/: data_utils.py  linear_regression.py
pcl/test/ourcvfh_regression/data/: data.txt  hists.txt  poses.txt  rolls.txt
