<?xml version="1.0"?>
<package>
  <name>object_recognition_msd_pcl</name>
  <version>0.0.0</version>
  <description>The object_recognition_msd_pcl package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="msd-u64@todo.todo">msd-u64</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <build_depend>libopenni-dev</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>libopenni-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  
  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>ecto_opencv</build_depend>
  <build_depend>ecto_openni</build_depend>
  <build_depend>object_recognition_core</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>ecto_opencv</run_depend>
  <run_depend>ecto_openni</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>object_recognition_core</run_depend>
  
  <build_depend>libpcl-1.7-all-dev</build_depend>
  <run_depend>libpcl-1.7-all</run_depend>

  <build_depend>libhdf5</build_depend>
  <run_depend>libhdf5</run_depend>
  
  <build_depend>libflann1</build_depend>
  <run_depend>libflann1</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
